moved home up so on mobile all info can be seen even when url bar is present + trying to fix fade in animation on background video

--- a/src/components/background/video/backgroundVideo.module.css
+++ b/src/components/background/video/backgroundVideo.module.css
@@ -21,6 +21,9 @@
     height: 100%;
 
     z-index: -99;
+}
+
+.fadeIn {
     animation: fadeIn 2s;
 }
 
